Removed scroll bar stable from entire web app, Fixed display issue with itemDisplay state not properly handled for CollapsibleDisplay, Replaced various bg-main with bg-white to heighten contrast

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,11 +4,6 @@
 @tailwind utilities;
 
 
-
-* {
-  scrollbar-gutter: stable;
-}
-
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
